# date_detection

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: release.yml  test.yml
